BE-87, feat : add progress status for sorting